# stegxx

./: CMakeLists.txt
benchmark/: CMakeLists.txt  bm_strmanip.cpp
include/: macrologger.hpp  steg.hpp
include/types/: PPM.hpp  base_type.hpp  byte.hpp  message.hpp
resources/PPM/: 14.ppm
src/: CMakeLists.txt  PPM.cpp  byte.cpp  main.cpp  message.cpp  steg.cpp
test/: CMakeLists.txt  test_coding.cpp  test_types.cpp
